# HarmonyScope

./: .gitignore  README.md  plot_features.py  pyproject.toml
.github/workflows/: pypi.yml
src/HarmonyScope/: __init__.py  analyze_chord.py  plot_features.py
src/HarmonyScope/analyzer/: chord_analyzer.py
src/HarmonyScope/cli/: demo_analyze.py  file_analyze.py  mic_analyze.py
src/HarmonyScope/core/: chord.py  constants.py  pitch.py
tests/: test_generate.py
